added few frontend pages and bug fixes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,3 +7,9 @@
     font-weight: 600;
     font-style: normal;
 }
+.font-bitter {
+    font-family: "Bitter", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+  }
